--- a/style.css
+++ b/style.css
@@ -64,8 +64,15 @@ body {
     background-position: center;
 }
 
+.mySwiper .swiper-wrapper {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 40px;
+}
+
 .mySwiper .swiper-slide {
-    /* width: 25%; */
+    width: 100%;
     height: 100%;
     opacity: 0.4;
 }
