--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     background-color: #0C1015;
     color: #FFF;
     font-family: 'Inter', sans-serif;
+    display: flex;
+    align-items: center;
 }
 
 .container {
@@ -23,6 +25,9 @@ body {
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    gap: 44px;
+    height: 516px;
+
 }
 
 /* .swiper {
@@ -54,7 +59,7 @@ body {
 
 .swiper {
     width: 100%;
-    height: 300px;
+    height: 516px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -66,9 +71,10 @@ body {
 
 .mySwiper .swiper-wrapper {
     display: grid !important;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 150px 150px 150px;
     gap: 40px;
+    height: 516px;
 }
 
 .mySwiper .swiper-slide {
@@ -84,6 +90,6 @@ body {
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: auto%;
     object-fit: cover;
 }
